fix scalling, add joblib files

--- a/nbs/nb_62-scaling_encoding.ipynb
+++ b/nbs/nb_62-scaling_encoding.ipynb
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_pickle()"
+    "X = pd.read_pickle(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/X.pkl.xz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -141,22 +141,22 @@
     {
      "data": {
       "text/plain": [
-       "['/mnt/d/Clientes/ODX/agro/agro_book/data/categories.joblib']"
+       "['data_gini/categories.joblib']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(x_scaler, paths['x_scaler'])\n",
-    "joblib.dump(scaled_X, paths['scaled_X'])\n",
+    "joblib.dump(x_scaler, 'data_gini/x_scaler.joblib')\n",
+    "joblib.dump(scaled_X, 'data_gini/scaled_X.joblib')\n",
     "\n",
-    "joblib.dump(y_scaler, paths['y_scaler'])\n",
-    "joblib.dump(scaled_y, paths['scaled_y'])\n",
+    "joblib.dump(y_scaler, 'data_gini/y_scaler.joblib')\n",
+    "joblib.dump(scaled_y, 'data_gini/scaled_y.joblib')\n",
     "\n",
-    "joblib.dump(categories, paths['categories'])"
+    "joblib.dump(categories, 'data_gini/categories.joblib')"
    ]
   },
   {
