added eli5-shap nb_63

--- a/nbs/nb_66-neural_network_classification.ipynb
+++ b/nbs/nb_66-neural_network_classification.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "def load_remote_joblib(url):\n",
     "    \"\"\"função utilizada para carregar joblib de fonte remota\n",
-    "    ESSA FUNCAO É PERIGOSA\n",
+    "    ESSAfeature_namesCAO É PERIGOSA\n",
     "    a função joblib.load pode executar código arbitrário durante sua execuççao\n",
     "    não utilize essa parte do código se você não tiver certeza do que está fazendo\n",
     "    \"\"\"\n",
@@ -136,13 +136,14 @@
     "    return joblib.load(BytesIO(content))\n",
     "    \n",
     "\n",
-    "x_scaler = load_remote_joblib(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/x_scaler.joblib\")\n",
-    "scaled_X = load_remote_joblib(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/scaled_X.joblib\")\n",
+    "x_scaler = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/x_scaler.joblib\")\n",
+    "scaled_X = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/scaled_X.joblib\")\n",
     "\n",
-    "y_scaler = load_remote_joblib(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/y_scaler.joblib\")\n",
-    "scaled_y = load_remote_joblib(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/scaled_y.joblib\")\n",
+    "y_scaler = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/y_scaler.joblib\")\n",
+    "scaled_y = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/scaled_y.joblib\")\n",
     "\n",
-    "categories = load_remote_joblib(\"https://github.com/feliciov/agro_online/raw/main/nbs/data_gini/categories.joblib\")"
+    "feature_names = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/features.joblib\")\n",
+    "categories = load_remote_joblib(\"https://github.com/odxone/imil_agro_anexo/raw/main/nbs/data_gini/categories.joblib\")"
    ]
   },
   {
