--- a/nbs/nb_63-logistic_regression.ipynb
+++ b/nbs/nb_63-logistic_regression.ipynb
@@ -38479,7 +38479,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
